--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-  "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/next" },
-    { "src": "backend/main.py", "use": "@vercel/python" }
-  ],
   "rewrites": [
-    { "source": "/api/:path*", "destination": "backend/main.py" },
-    { "source": "/(.*)", "destination": "frontend/$1" }
+    {
+      "source": "/api/:path*",
+      "destination": "/backend/main.py"
+    }
   ]
 }
